chore(components): fix dialog word overflow container wrap #652

--- a/client/ux/components/dialog/styles.scss
+++ b/client/ux/components/dialog/styles.scss
@@ -6,19 +6,22 @@
   top: 0;
   right: 0;
   z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   .dialog {
-    position: fixed;
-    top: 50%;
-    left: 50%;
     width: 300px;
-    margin-left: -150px;
     background-color: #fff;
     border: 1px solid #c7c7c7;
     border-radius: 5px;
     padding: 20px 30px;
-    box-shadow: 2px 2px 2px #c7c7c7;
-    z-index: 999;
+    z-index: 11;
+
+    .content--dialog {
+      white-space: pre-wrap;
+      word-wrap: break-word;
+    }
 
     .footer--dialog button:nth-child(2) {
       margin-left: 15px;
